# GoQuant

./: .env  .env.example  Anchor.toml  BEGINNER_SETUP_GUIDE.md  Cargo.toml  INDEX.md  README.md  SUBMISSION_CHECKLIST.md  ephemeral-vault-assignment.txt
backend/: Cargo.toml
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  security.rs
backend/src/api/: handlers.rs  middleware.rs  mod.rs  ws.rs
backend/src/managers/: auto_deposit.rs  delegation.rs  mod.rs  session_manager.rs  transaction_signer.rs  vault_monitor.rs
backend/tests/: more_unit_tests.rs  session_lifecycle.rs  ws_tests.rs
docs/: ARCHITECTURE.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  SECURITY_ANALYSIS.md  TECHNICAL_DOCUMENTATION.md  TEST_RESULTS.md  USER_GUIDE.md  VIDEO_SCRIPT.md
migrations/: 001_initial_schema.sql
programs/ephemeral-vault/: Cargo.toml
programs/ephemeral-vault/src/: lib.rs
programs/ephemeral-vault/tests/: anchor_integration.rs
tests/: integration_tests.rs
