[package]
name = "ephemeral-vault-backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-rt = "2.9"
actix = "0.13"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

rand = "0.8"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
futures = "0.3"
tokio-tungstenite = "0.21"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"

# Solana/Anchor dependencies removed from backend to avoid transitive
# dependency conflicts during local test runs. If you need blockchain
# features, re-add them and enable a feature flag.

[features]
# No default features. Enable features explicitly if needed.
default = []
